<resources>
	<string name="app_name">Map</string>
	<string name="button_profile">Profile</string>
	<string name="button_search">Search</string>
	<string name="name_text">Nickname</string>
	<string name="pass_text">Password</string>
	<string name="repeat_pass_text">Repeat password</string>
	<string name="email_text">Email</string>
	<string name="apply_changes_text">Apply changes</string>
	<string name="back_text">Back</string>
</resources>