<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.appcompat.widget.Toolbar
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:titleTextColor="@color/white">

			<Button
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:text="@string/back_text"
				android:onClick="backButtonClick"/>
		</androidx.appcompat.widget.Toolbar>

	</com.google.android.material.appbar.AppBarLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/name_text"
		android:layout_marginTop="10sp"/>

	<EditText
		android:id="@+id/name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="20dp"
		android:textIsSelectable="false"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/email_text"
		android:layout_marginTop="10sp"/>

	<EditText
		android:id="@+id/email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pass_text"
		android:layout_marginTop="10sp"/>

	<EditText
		android:id="@+id/pass"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<EditText
		android:id="@+id/pass_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/repeat_pass_text"
	/>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:text="@string/apply_changes_text"
		android:onClick="applyButtonClick"
		android:textSize="15dp"/>
</LinearLayout>